Improve subtopology